fixed scrollbar

--- a/resources/styles/index.scss
+++ b/resources/styles/index.scss
@@ -14,9 +14,10 @@
 }
 
 /* General */
-html, body, main, #screen #pauseMenu {
+html, body, main, #screen {
   font-family: Pixeloid, serif;
   background-image: url("../textures/background.png");
+  overflow: hidden;
   margin: 0;
   padding: 0;
   width: 100vw;
